Interim - messed up the CollectionViewController

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -605,6 +605,6 @@
         <image name="pin" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Awd-qE-0Md"/>
+        <segue reference="hgf-Lv-Mt7"/>
     </inferredMetricsTieBreakers>
 </document>
