Pin and refresh buttons added to Collection View.

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -582,8 +582,14 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="post" destination="aSf-Bn-2Zc" id="cMH-3l-qcq"/>
+                        <outlet property="refresh" destination="aSf-Bn-2Zc" id="ugX-tY-BlU"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MC2-FE-xKs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <barButtonItem systemItem="refresh" id="2uy-8e-28z" userLabel="Refresh"/>
+                <barButtonItem image="pin" id="aSf-Bn-2Zc" userLabel="Post"/>
             </objects>
             <point key="canvasLocation" x="1061" y="1769"/>
         </scene>
