Added refresh and posting functionality to collection view buttons.

--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -588,8 +588,16 @@
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MC2-FE-xKs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <barButtonItem systemItem="refresh" id="NVc-gm-05x"/>
-                <barButtonItem image="pin" id="QmH-s9-vYv" userLabel="Post"/>
+                <barButtonItem systemItem="refresh" id="NVc-gm-05x">
+                    <connections>
+                        <action selector="refresh:" destination="ReJ-me-mTX" id="pE8-tc-9j5"/>
+                    </connections>
+                </barButtonItem>
+                <barButtonItem image="pin" id="QmH-s9-vYv" userLabel="Post">
+                    <connections>
+                        <segue destination="uuR-OF-J1Q" kind="presentation" id="8gr-bo-P3H"/>
+                    </connections>
+                </barButtonItem>
             </objects>
             <point key="canvasLocation" x="1061" y="1769"/>
         </scene>
@@ -621,6 +629,6 @@
         <image name="udacity" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Awd-qE-0Md"/>
+        <segue reference="8gr-bo-P3H"/>
     </inferredMetricsTieBreakers>
 </document>
